k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-timesheet-sync
  labels:
    app: jira-timesheet-sync
spec:
  selector:
    app: jira-timesheet-sync
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
